--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>心形团试验</title>
+		<title>LOVE YOU</title>
 		<style type="text/css">
 			body{
 				background: #ffe;
