--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				margin-top: -15px;
 			}
 			#div3{
-				left: 120px;
+				left: 220px;
 				top: 130px;
 				width: 300px;
 				height: 500px;
@@ -108,6 +108,7 @@
 			Baby, I love you forever;<br>
 		</div>
 		<div id="div3"></div>
+		<embed src="张杰、谢娜 - 明天过后.mp3" hidden="true" loop="true" autostart="true"></embed>
 		<script type="text/javascript">
 		var timer1 = setInterval(function (){
 		function aa(x,y){
