--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>LOVE YOU</title>
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Tangerine">
 		<style type="text/css">
 			body{
 				background: black;
@@ -21,11 +22,10 @@
 				width: 20px;
 				height: 20px;
 				overflow: hidden;
-				background:url(img/12111.jpg) no-repeat;
 				background-size: 40px;
 				border-radius: 50%;
 				transition: all 3s;
-				box-shadow: 5px 5px 10px rgba(255,255,255,.3);
+				box-shadow: 5px 5px 10px rgba(255,255,255,.4);
 			}
 			#timer{
 				width: 500px;
@@ -56,8 +56,9 @@
 				top: 130px;
 				width: 300px;
 				height: 500px;
-				color: brown;
-				font-size: 15px;
+				color:  aquamarine;
+				font-size: 20px;
+				font-family:Tangerine,Tahoma,Arial,"\65f6\5c1a\4e2d\9ed1\7b80\4f53","\5b8b\4f53";
 			}
 			#div4{
 				display: none;
