--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>LOVE YOU</title>
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Tangerine">
 		<style type="text/css">
+			/* latin */
+			@font-face {
+			  font-family: 'Tangerine';
+			  font-style: normal;
+			  font-weight: 400;
+			  src: local('Tangerine'), url(http://fonts.gstatic.com/s/tangerine/v7/HGfsyCL5WASpHOFnouG-RFtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
+			  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+			}
 			body{
 				background: black;
 			}
