--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>LOVE YOU</title>
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Tangerine">
 		<style type="text/css">
 			body{
 				background: black;
@@ -57,6 +58,7 @@
 				height: 500px;
 				color:  aquamarine;
 				font-size: 15px;
+				font-family:Tangerine,"\65f6\5c1a\4e2d\9ed1\7b80\4f53","\5b8b\4f53";
 			}
 			#div4{
 				display: none;
@@ -125,7 +127,7 @@
 		<script type="text/javascript">
 		//心形图案
 		var timer1 = setInterval(function (){
-		function aa(x,y){
+		function yy(x,y){
 			var div1 = document.getElementById('div6');
 			var div2 = document.createElement('div');
 			div2.className = 'div2';
@@ -134,14 +136,14 @@
 			div2.style.animation = 'love 4s';
 			div1.appendChild(div2);
 		}
-		function bb(r,dx,dy){
+		function LL(r,dx,dy){
 			var m,n,x,y,i;
 			for(i = 0;i < 150; i += 0.4){
 				m = i;
 				n = -r * (((Math.cos(i) * Math.sqrt(Math.abs(Math.sin(i)))) / (Math.cos(i) + 1.5)) - 2 * Math.cos(i) + 2 );
 				x = n * Math.sin(i) + dx;
 				y = n * Math.cos(i) + dy;
-				aa(x,y);
+				yy(x,y);
 			}
 			if(i>150){
 				clearInterval(timer1);
@@ -161,12 +163,12 @@
 				}
 			},80);
 		}
-		bb(120,230,100);},1000);
+		LL(120,230,100);},1000);
 
 		
 		
 		//距离到现在的时间
-		var interval = 1500; 
+		var interval = 1000; 
 		function ShowCountDown(year,month,day) { 
 			var now = new Date(); 
 			var endDate = new Date(year, month-1, day); 
